# koitonet

./: CMakeLists.txt  configure
client/: CMakeLists.txt  client.cpp  client.hpp
main/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  server.cpp  server.hpp
